--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
     "method-override": "^3.0.0",
-    "mongoose": "^5.10.12"
+    "mongoose": "^5.10.12",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   }
 }
